--- a/weatherProject/index.html
+++ b/weatherProject/index.html
@@ -6,5 +6,10 @@
   </head>
   <body>
     <h1>this is a weather app</h1>
+    <form  action="/" method="post">
+      <label for="">city</label>
+      <input type="text" name="cityName" placeholder="enter city Name">
+      <button type="submit" name="button">Go</button>
+    </form>
   </body>
 </html>
